Fix list view animation & mobile rendering

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name='theme-color' content='#730DBC'>
     <title>deck-royale!</title>
     <style>
-    html, body, #app { height: 100vh; }
+    html, body, #app { height: 100vh !important; }
 
-    body { background-color: #EEDDEE; }
+    body { background-color: #EEDDEE !important; }
     </style>
   </head>
   <body>
