--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
     html, body, #app { height: 100vh !important; }
 
-    body { background-color: #EEDDEE !important; }
+    body { background-color: #EEDDEE55 !important; }
     </style>
   </head>
   <body>
