Add web standard meta tags

--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name='description' content="A Clash Royale random deck generator. Ain't that fun?">
+    <meta name='author' content='Gabriel Chiconi'>
+    <meta name='keywords' content='Clash Royale, Vue, web development, random deck generator'>
+    <title>Deck Royale!</title>
 
+    <!-- Android stuff -->
     <meta name='theme-color' content='#730DBC'>
-    <title>deck-royale!</title>
+    <meta name='mobile-web-app-capable' content='yes'>
+
+    <!-- Windows fluff -->
+    <meta name="msapplication-navbutton-color" content="#730DBC">
+    <meta name="msapplication-TileColor" content="#730DBC">
+
+    <!-- Pinned Sites  -->
+    <meta name="application-name" content="Deck Royale!">
+    <meta name="msapplication-tooltip" content="Clash Royale random deck generator">
+    <meta name="msapplication-starturl" content="/">
+
+
     <style>
     html, body, #app { height: 100vh !important; }
 
