--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
     <meta name="msapplication-tooltip" content="Clash Royale random deck generator">
     <meta name="msapplication-starturl" content="/">
 
+<meta name="image" content="http://www.clashapi.xyz/images/cards/dark-prince.png">
+
+<!-- Schema.org for Google -->
+<meta itemprop="name" content="Deck Royale!">
+<meta itemprop="description" content="A Clash Royale random deck generator. Ain't that fun?">
+<meta itemprop="image" content="http://www.clashapi.xyz/images/cards/dark-prince.png">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Deck Royale!">
+<meta name="twitter:description" content="A Clash Royale random deck generator. Ain't that fun?">
+<meta name="twitter:site" content="@gabrielchiconi">
+<meta name="twitter:creator" content="@gabrielchiconi">
+<meta name="twitter:image:src" content="http://www.clashapi.xyz/images/cards/dark-prince.png">
+
+<!-- Open Graph general (Facebook, Pinterest & Google+) -->
+<meta name="og:title" content="Deck Royale!">
+<meta name="og:description" content="A Clash Royale random deck generator. Ain't that fun?">
+<meta name="og:image" content="http://www.clashapi.xyz/images/cards/dark-prince.png">
+<meta name="og:url" content="deck-royale.000webhostapp.com">
+<meta name="og:site_name" content="Deck Royale!">
+<meta name="fb:admins" content="gabchiconi">
+<meta name="og:type" content="website">
 
     <style>
     html, body, #app { height: 100vh !important; }
